data/derived/fa15/progs/unify/prog2113.ml.out
Characters 49-53:
  in wwhile ((fx),b);;
             ^^^^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
